# Project3-CUDA-Path-Tracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTRUCTION.md  README.md  Settings.json  build.sh  imgui.ini  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep  test.2023-09-29_13-10-18z.148samp.hdr  test.2023-09-29_13-10-51z.585samp.hdr  timings.txt  timings_old.txt
assets/: Bunny.gltf  Orange.gltf  Watermelon.gltf  teapot.gltf
blender/: cornell box.blend
img/: scene.gltf
img/cool_renders/: explanations.txt
img/results/: defualt_cornell.hdr
mesh/: cube.mtl  cube_norm.mtl  cube_text2.mtl  teapot_n_glass.mtl  teapot_reduce.mtl  teapot_reduce_1.mtl
mesh/sponza/: material.mtl
oidn-2.0.1.x64.windows/doc/: CHANGELOG.md  LICENSE.txt  README.md  third-party-programs-DPCPP.txt
oidn-2.0.1.x64.windows/include/OpenImageDenoise/: config.h  oidn.h  oidn.hpp
oidn-2.0.1.x64.windows/lib/cmake/OpenImageDenoise-2.0.1/: OpenImageDenoiseConfig-release.cmake  OpenImageDenoiseConfig.cmake  OpenImageDenoiseConfigVersion.cmake
resources/scenes/: MeshOnly.json  cornell.txt  cornellBox.json  cornellBox.txt  cornellMesh.json  demo_1.json  materialBall.json
scenes/: 012-building.txt  085-coffee.txt  1.txt  114-space-potion.txt  aa.txt  asymtest.txt  asymtest_conductor.txt  asymtest_dielectric.txt  asymtest_white_fur.txt  avocado.txt  avocado_cornell.txt  backrooms.txt  basic_demo.txt  basic_demo_closed.txt  blenderMonke.txt  blinn.txt  brick.txt  bunny-lib.txt  bunny-skybox.txt  bunny.gltf  bunny.txt  bvh.txt  camera.gltf  chair.txt  chessgame.txt  close_box.txt  closedDode.txt  cornell - Copy.txt  cornell-cat.txt  cornell-glass-bunny.txt  cornell-glass-rock.txt  cornell-glass-spot.txt  cornell-glass.txt  cornell-metal.txt  cornell-metallic-bunny.txt  cornell-multi-box.txt  cornell-multi.txt  cornell-obj.txt  cornell-sphere.txt  cornell.txt  (+140 more)
scenes/bmw/: bmw.txt
scenes/bottle/: scene.gltf
scenes/cornell/: CornellBox-Original.mtl  CornellBox-Water.mtl  cornell.txt
scenes/cube/: cube.txt
scenes/gltf/: freddy.gltf  monkey.gltf  seele_left.glb  seele_light.gltf  seele_right.glb  space-potion.gltf  sphere.gltf  teapot.gltf  two_planes.gltf
scenes/gltf/Icosphere/: icosphere.gltf
scenes/gltf/backrooms/: baseboard.glb  ceiling_lights.glb  ceiling_tiles.glb  walls.glb
scenes/gltf/bunny/: bunny.gltf  license.txt
scenes/gltf/dragon/: dragon.gltf
scenes/gltf/evangelion/: background.glb  fog.glb  mountains.glb  ocean.glb  rei_plush.glb  sand.glb
scenes/gltf/freddy/: eyes.gltf
scenes/gltf/mario/: license.txt  mario.gltf
scenes/gltf/shinji/: chair.glb  hair.glb
scenes/head/: head.txt
scenes/models/: chess.gltf  cube.gltf  suzanne.gltf
scenes/models/Vase-obj/: Vase-obj.mtl
scenes/piplup/: scene.gltf
scenes/teapot/: teapot.txt
src/: BVH.h  application.cpp  application.h  assembler.cu  assembler.h  bound.cpp  bound.h  bsdf.h  bsdfStruct.h  bvh.cpp  bvh.h  bxdf.h  cameraController.cpp  cameraController.h  common.cpp  common.h  config.cpp  config.h  cudaTexture.cu  cudaTexture.h  cudaUtil.h  cudaUtilities.h  cuda_data.h  depScene.cpp  depScene.h  environmentMap.h  extrautils.hpp  geom.cpp  geom.h  glslUtility.cpp  gltfLoader.cpp  gltfLoader.h  gpuScene.cpp  gpuScene.h  hostscene.cpp  hostscene.h  image.cpp  image.h  interactions.h  intersections.h  (+41 more)
src/ImGui/: imgui.h
src/Mesh/: objLoader.cpp  objLoader.h  tiny_obj_loader.h
src/tinygltf/: CMakeLists.txt  tiny_gltf.h
stream_compaction/: CMakeLists.txt  common.cu  cpu.cu  cpu.h  efficient.cu  efficient.h  naive.cu  radixsort.cu  radixsort.h  thrust.cu  thrust.h
